GPU Fault while rendering scenes with subsurface scattering using OpenCL #60300

Closed
opened 2019-01-08 02:44:53 +01:00 by Sergey · 10 comments

System Information
Operating system: Arch Linux, Ubuntu 18.04 LTS
Graphics card: Sapphire RX 590 Nitro+

Blender Version
Broken:
2.79 release (2c0c1f494d), 2.8 beta (266b1e2cdb)

Short description of error
I'm running arch linux, and recently I've got a new sapphire RX 590 Nitro+. On Arch Linux, I'm using an open source amdgpu driver, that's included in linux kernel, and opencl driver from amdgpu-pro package. On Ubuntu I'm using full official amdgpu-pro driver set.

On both occasions, rendering with OpenCL works fine, unless the scene contains objects with subsurface scattering (either subsurface scattering in principled BDSF, or a standalone node). In that case, after finishing OpenCL kernel compilation (which happens without any problems), my video output completely halts, and I have numerous "GPU fault" errors in my system journal (I've included full text as attachment in journalctl.txt). Blender terminal output doesn't produce any errors though.

At first, I thought it's a hardware or driver problem. I didn't find anything like this though. It only happens in blender, while trying to use subsurface node. Any other opencl uses (luxrender, phoronix test suite with juliagpu), as well as general benchmarks and stress tests of my graphics card are completely fine.

I tried using many combinations of older linux kernel versions (since it includes amdgpu driver) and related libraries (libdrm and amd opencl runtime). I also installed Ubuntu 18.04 and official proprietary amdgpu-pro driver set, but I had exactly the same problem, so I suspect it's a blender bug (and not related to my driver or kernel).

The problem doesn't occur if nodetree contains subsurface prior to opencl initialization, it's possible to make a new .blend, add principled bdsf and start rendering it, it will work until the first opencl kernel compilation, after which it crashes. On complex scenes though, it occurs anyway, even if I just opened the file and didn't change anything yet. There may be other cases when this problem occurs, but, unfortunately, trying to determine more causes is hard, since I need to hard-reset my computer every time.

I've tried various blender versions, including 2.77, 2.78, 2.79, latest stable 2.8 beta and latest nightly 2.8 build. On 2.77 and 2.78, it worked completely fine, due to missing opencl subsurface scattering implementation, and this shader was just black. On 2.79 and later, I experienced the problem described above.

I found a somewhat similar bug report, although it occurs in different conditions https://developer.blender.org/T57774.

I also included a "system-info.txt" file from my Arch Linux installation.

UPD: This bug was also reproduced on another system (arch linux) with Asus Strix r9 390 8G OC and amdgpu-pro opencl driver.

Exact steps for others to reproduce the error
Using opencl with amdgpu-pro driver, with included .blend file, for me, this problem can be reproduced by enabling "rendered" viewport mode first, and then adding some amount of subsurface scattering in principled BDSF node in node editor.

test.blend

system-info.txt

journalctl.txt

**System Information** Operating system: Arch Linux, Ubuntu 18.04 LTS Graphics card: Sapphire RX 590 Nitro+ **Blender Version** Broken: 2.79 release (2c0c1f494dcf), 2.8 beta (266b1e2cdbc1) **Short description of error** I'm running arch linux, and recently I've got a new sapphire RX 590 Nitro+. On Arch Linux, I'm using an open source amdgpu driver, that's included in linux kernel, and opencl driver from amdgpu-pro package. On Ubuntu I'm using full official amdgpu-pro driver set. On both occasions, rendering with OpenCL works fine, unless the scene contains objects with subsurface scattering (either subsurface scattering in principled BDSF, or a standalone node). In that case, after finishing OpenCL kernel compilation (which happens without any problems), my video output completely halts, and I have numerous "GPU fault" errors in my system journal (I've included full text as attachment in journalctl.txt). Blender terminal output doesn't produce any errors though. At first, I thought it's a hardware or driver problem. I didn't find anything like this though. It only happens in blender, while trying to use subsurface node. Any other opencl uses (luxrender, phoronix test suite with juliagpu), as well as general benchmarks and stress tests of my graphics card are completely fine. I tried using many combinations of older linux kernel versions (since it includes amdgpu driver) and related libraries (libdrm and amd opencl runtime). I also installed Ubuntu 18.04 and official proprietary amdgpu-pro driver set, but I had exactly the same problem, so I suspect it's a blender bug (and not related to my driver or kernel). The problem doesn't occur if nodetree contains subsurface prior to opencl initialization, it's possible to make a new .blend, add principled bdsf and start rendering it, it will work until the first opencl kernel compilation, after which it crashes. On complex scenes though, it occurs anyway, even if I just opened the file and didn't change anything yet. There may be other cases when this problem occurs, but, unfortunately, trying to determine more causes is hard, since I need to hard-reset my computer every time. I've tried various blender versions, including 2.77, 2.78, 2.79, latest stable 2.8 beta and latest nightly 2.8 build. On 2.77 and 2.78, it worked completely fine, due to missing opencl subsurface scattering implementation, and this shader was just black. On 2.79 and later, I experienced the problem described above. I found a somewhat similar bug report, although it occurs in different conditions https://developer.blender.org/T57774. I also included a "system-info.txt" file from my Arch Linux installation. UPD: This bug was also reproduced on another system (arch linux) with Asus Strix r9 390 8G OC and amdgpu-pro opencl driver. **Exact steps for others to reproduce the error** Using opencl with amdgpu-pro driver, with included .blend file, for me, this problem can be reproduced by enabling "rendered" viewport mode first, and then adding some amount of subsurface scattering in principled BDSF node in node editor. [test.blend](https://archive.blender.org/developer/F6215317/test.blend) [system-info.txt](https://archive.blender.org/developer/F6215320/system-info.txt) [journalctl.txt](https://archive.blender.org/developer/F6215321/journalctl.txt)
Author

Added subscriber: @ClockGen

Added subscriber: @ClockGen

This issue was referenced by blender/cycles@cd5b943965

This issue was referenced by blender/cycles@cd5b94396584cadfae5ed4d9c3f9e3d2063dfb1f

This issue was referenced by 8491dba0c6

This issue was referenced by 8491dba0c6bb96f9785e27429c72315ba9660511

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

I've tested latest experimental builds for 2.79 and 2.80, but the problem still persists.

I've tested latest experimental builds for 2.79 and 2.80, but the problem still persists.
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Sergey reopened this issue 2019-01-09 14:05:30 +01:00

This issue was referenced by blender/cycles@761d23db6c

This issue was referenced by blender/cycles@761d23db6c7ce8e14014864e5e9fba32838320a2

This issue was referenced by b7fb3296c1

This issue was referenced by b7fb3296c101bf408455352ec9784a8870672c81

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Tested with nightly 2.79 and 2.80, everything seems to work fine.

Tested with nightly 2.79 and 2.80, everything seems to work fine.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60300
No description provided.