Fix T60300: Cycles SSS render hanging with AMD OpenCL.